syntax = "proto3";

package se.service;

// The core editor API from a frontend point of view.
service SemanticEditor {
    // Perform any user-originating action on the editor instance.
    rpc PerformAction (ActionRequest) returns (ActionResponse);
}

// A request to perform an action originating from the user.
message ActionRequest {

}

// A response to an action request.
message ActionResponse {

}
